added addNewSong feature

--- a/DeepContent.ipynb
+++ b/DeepContent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -41,13 +41,13 @@
        "(1, 50)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommender = ContentRecommender('dataset/deep_learning/label_map(boolean_mood).csv', 'dataset/main_song_labels.csv', 'dataset/main_labels.csv', 'dataset/main_user_rating.csv',None,None,None,'Recommender/DeepContent/use5-bestcheckpoint-0.08- 0.35.hdf5','dataset/song_preview/','dataset/deep_learning/label_map(boolean_mood).csv')\n",
+    "recommender = ContentRecommender('dataset/deep_learning/label_map(boolean_mood).csv', 'dataset/main_song_labels.csv', 'dataset/main_labels.csv', 'dataset/main_user_rating.csv','Recommender/DeepContent/bestcheckpoint-1501.06- 0.34.hdf5','dataset/song_preview/','dataset/deep_learning/label_map(boolean_mood).csv')\n",
     "result = recommender.analyzeNewSong('/home/capt4ce/projects/major_project/dataset/song_preview/TRAAAAW128F429D538-mzm.jmksdiul.aac.p.m4a')\n",
     "result.shape\n",
     "\n",
@@ -58,38 +58,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  5.59105096e-10,   1.66387973e-10,   2.66231287e-10,\n",
-       "          9.65666516e-08,   6.21057858e-11,   2.65521327e-10,\n",
-       "          1.67285251e-07,   1.09928552e-10,   1.60224403e-11,\n",
-       "          8.36470962e-11,   1.17957883e-11,   1.15742194e-10,\n",
-       "          4.89744113e-11,   1.86698157e-11,   4.39599068e-13,\n",
-       "          1.09641470e-10,   7.90774043e-12,   9.38518707e-10,\n",
-       "          4.58757837e-10,   4.39521336e-12,   4.40008663e-12,\n",
-       "          6.72966728e-13,   9.61949357e-12,   2.01099866e-11,\n",
-       "          1.78979661e-11,   6.13958120e-11,   6.83188055e-12,\n",
-       "          5.60954859e-11,   3.50155040e-12,   9.34340019e-12,\n",
-       "          5.50741690e-13,   5.21533305e-09,   8.02132319e-12,\n",
-       "          9.76045460e-12,   1.26516722e-12,   7.98293289e-13,\n",
-       "          1.04216017e-12,   8.81130835e-13,   1.34466593e-09,\n",
-       "          3.66065407e-11,   1.21836976e-11,   3.16821951e-11,\n",
-       "          1.18484172e-11,   1.31788336e-09,   9.96600358e-10,\n",
-       "          1.25853234e-07,   7.24443652e-08,   4.55768543e-08,\n",
-       "          6.94191327e-09,   2.49397586e-10]], dtype=float32)"
+       "array([[  1.35320912e-11,   2.22093854e-11,   3.70711968e-11,\n",
+       "          1.44899726e-09,   7.70606062e-12,   6.30183536e-12,\n",
+       "          9.40023503e-10,   4.99401258e-12,   1.94591262e-12,\n",
+       "          6.15742700e-12,   1.30737299e-13,   1.97304291e-11,\n",
+       "          4.66548892e-13,   1.33168337e-11,   8.32503283e-14,\n",
+       "          2.00772081e-12,   3.28529543e-12,   2.29648800e-11,\n",
+       "          5.67400536e-11,   1.90934467e-13,   7.00692217e-13,\n",
+       "          1.02979020e-13,   5.53825302e-12,   6.17326394e-13,\n",
+       "          1.42633924e-13,   3.04563102e-12,   2.08396248e-13,\n",
+       "          4.15846963e-13,   7.21758553e-15,   1.83430246e-12,\n",
+       "          8.42174790e-15,   5.42903361e-11,   3.95715395e-14,\n",
+       "          3.24846046e-14,   8.82763338e-15,   3.57355027e-15,\n",
+       "          2.68138506e-12,   8.24411408e-14,   1.15010594e-12,\n",
+       "          4.29642704e-13,   7.27798626e-14,   5.61179033e-13,\n",
+       "          4.03194161e-13,   1.06373202e-10,   1.32802571e-11,\n",
+       "          2.11586815e-09,   5.41348744e-09,   6.26232799e-09,\n",
+       "          1.29242950e-10,   2.39270669e-11]], dtype=float32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  2.16030283e-03,   3.54593759e-03,   5.91914775e-03,\n",
+       "          2.31382728e-01,   1.22997258e-03,   1.00573862e-03,\n",
+       "          1.50107190e-01,   7.96898850e-04,   3.10162635e-04,\n",
+       "          9.82678845e-04,   2.03061591e-05,   3.15008522e-03,\n",
+       "          7.39302704e-05,   2.12592958e-03,   1.27231951e-05,\n",
+       "          3.20032501e-04,   5.24042116e-04,   3.66657879e-03,\n",
+       "          9.05997120e-03,   2.99187504e-05,   1.11319481e-04,\n",
+       "          1.58735729e-05,   8.83805915e-04,   9.80072000e-05,\n",
+       "          2.22058734e-05,   4.85771307e-04,   3.27071357e-05,\n",
+       "          6.58339268e-05,   5.81898178e-07,   2.92340148e-04,\n",
+       "          7.74185025e-07,   8.66878778e-03,   5.74834303e-06,\n",
+       "          4.61666514e-06,   8.38998858e-07,   0.00000000e+00,\n",
+       "          4.27606632e-04,   1.25939805e-05,   1.83084165e-04,\n",
+       "          6.80368976e-05,   1.10512183e-05,   8.90412994e-05,\n",
+       "          6.38134588e-05,   1.69856455e-02,   2.12008879e-03,\n",
+       "          3.37872088e-01,   8.64452779e-01,   1.00000000e+00,\n",
+       "          2.06376035e-02,   3.82022583e-03]], dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalized = (result-np.min(result))/(np.max(result)-np.min(result))\n",
+    "normalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00995276\n",
+      "[(0.23138273, 'Urban'), (0.15010719, 'Western Hip-Hop/Rap')]\n",
+      "[(0.33787209, 'anger'), (0.86445278, 'neutral')]\n",
+      "[(1.0, 'slow')]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Urban', 'Western Hip-Hop/Rap', 'anger', 'neutral', 'slow']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels = ['Alternative & Punk',  'Rock',  'Traditional',  'Urban',  'Pop',  'Other',\n",
+    "                        'Western Hip-Hop/Rap', 'Metal', 'Western Pop', 'Electronica', 'Punk', 'Indie Rock', 'Alternative', '70s Rock', 'Adult Alternative Rock', 'Electric Blues',\n",
+    "                        'Country', 'Jazz', 'Contemporary R&B/Soul', 'Alternative Rock', 'Acoustic Blues', '60s Rock', 'Classic Country', 'Emo & Hardcore', 'Mainstream Rock', 'Classic R&B/Soul',\n",
+    "                        'Synth Pop', 'General Mainstream Rock', 'Pop Punk', 'Adult Alternative Pop', 'Black Metal', 'Old School Hip-Hop/Rap', 'Latin Pop', 'General Latin Pop', 'Brit Rock', 'New Wave Pop',\n",
+    "                        'Classic Hard Rock', 'Adult Contemporary', 'East Coast Rap', 'European Pop', 'Latin Rock', 'Hard Rock', 'Religious',\n",
+    "                        'happiness', 'sadness', 'anger', 'neutral',\n",
+    "                        'slow', 'medium', 'fast']\n",
+    "\n",
+    "genre_list = labels[:43]\n",
+    "mood_list = labels[43:47]\n",
+    "tempo_list = labels[47:]\n",
+    "\n",
+    "genre = normalized[0][:43]\n",
+    "mood = normalized[0][43:47]\n",
+    "tempo = normalized[0][47:]\n",
+    "print(np.average(genre))\n",
+    "selected_genre = [(i,j) for (i,j) in zip(genre,genre_list) if i >= np.average(genre)]\n",
+    "selected_mood = [(i,j) for (i,j) in zip(mood,mood_list) if i >= np.average(mood)]\n",
+    "selected_tempo = [(i,j) for (i,j) in zip(tempo,tempo_list) if i >= np.max(tempo)]\n",
+    "\n",
+    "print(selected_genre)\n",
+    "print(selected_mood)\n",
+    "print(selected_tempo)\n",
+    "a = []\n",
+    "# selected_genre=[i[1] for i in selected_genre]\n",
+    "# selected_mood=[i[1] for i in selected_mood]\n",
+    "# selected_tempo=[i[1] for i in selected_tempo]\n",
+    "a = [i[1] for i in selected_genre]+[i[1] for i in selected_mood]+[i[1] for i in selected_tempo]\n",
+    "a"
    ]
   },
   {
